[package]
name = "fixed_typemap"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
readme = "../README.md"
description = "A typemap which can allocate types inline with zero overhead and allow for iteration by traits"
homepage = "https://docs.rs/fixed_typemap"
repository = "https://github.com/ahicks92/fixed_typemap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed_typemap_internals = { version = "0.1.0", path = "../fixed_typemap_internals" }
fixed_typemap_macros = { version = "0.1.0", path = "../fixed_typemap_macros" }
derive_more = "0.99.17"

[dev-dependencies]
