[package]
name = "fixed_typemap_macros"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Internals for the fixed_typemap crate"
homepage = "https://docs.rs/fixed_typemap"
repository = "https://github.com/ahicks92/fixed_typemap"

[lib]
proc-macro = true

[dependencies]
darling = "0.13.1"
proc-macro2 = "1.0.34"
quote = "1.0.10"
syn = { version = "1.0.82", features = ["default", "extra-traits"] }
